# catalyst

./: .clang-format  .clang-tidy  .gitignore  404.html  CATALYST.yaml  CMakeLists.txt  CONTRIBUTING.md  DOCS.md  LICENSE.md  Makefile  NOTES.md  README.md  ROADMAP.md  catalyst.yaml  catalyst_debug.yaml  catalyst_release.yaml  catalyst_test.yaml  goals.md  index.html  mkdocs.yml
CONTRIBUTING/: index.html
DOCS/: CONFIGURATION.md  DOCS.md  STRUCTURE.md  logfile.md
ROADMAP/: index.html
cbe/: index.html
cli/: index.html
cli/add/: index.html
cli/clean/: index.html
cli/download/: index.html
cli/fetch/: index.html
cli/fmt/: index.html
cli/generate/: index.html
cli/ide_sync/: index.html
cli/init/: index.html
cli/install/: index.html
cli/run/: index.html
cli/test/: index.html
cli/tidy/: index.html
concepts/catalystignore/: index.html
concepts/configuration/: index.html
concepts/dependencies/: index.html
concepts/hooks/: index.html
concepts/preprocessor/: index.html
concepts/profiles/: index.html
concepts/workspaces/: index.html
docs/: cbe.md  configuration.md  getting_started.md  hierarchy.md  hooks.md  index.md  installation.md  logfile.md  preprocessor_variables.md  profiles.md  project_structure.md  structure.md
docs/cli/: build.md  clean.md  download.md  fetch.md  fmt.md  generate.md  ide_sync.md  index.md  init.md  install.md  run.md  test.md  tidy.md
docs/concepts/: catalystignore.md  configuration.md  dependencies.md  hooks.md  preprocessor.md  profiles.md  workspaces.md
docs2/: getting_started.md  index.md  installation.md
docs2/cli/: add.md
docs2/concepts/: configuration.md  dependencies.md  hooks.md  preprocessor.md  profiles.md
getting_started/: index.html
include/: globals.h  parse_rules.h  subcommand_actions.h  utils.h
include/catalyst/: GLOBALS.hpp  dir_guard.hpp  dispatch.hpp  hooks.hpp  process_exec.h  process_exec.hpp  workspace.hpp
include/catalyst/log-utils/: log.hpp
include/catalyst/os_utils/: os_defs.hpp
include/catalyst/subcommands/: add.hpp  build.hpp  clean.hpp  configure.hpp  download.hpp  fetch.hpp  fmt.hpp  generate.hpp  ide_sync.hpp  init.hpp  install.hpp  run.hpp  test.hpp  tidy.hpp
include/catalyst/subcommands/add/: action.hpp  parse_cli.hpp
include/catalyst/subcommands/clean/: action.hpp  parse_cli.hpp
include/catalyst/subcommands/configure/: action.hpp  parse_cli.hpp
include/catalyst/subcommands/fetch/: action.hpp  parse_cli.hpp
include/catalyst/subcommands/generate/: action.hpp  parse_cli.hpp
include/catalyst/subcommands/init/: action.hpp  parse_cli.hpp
include/catalyst/subcommands/run/: action.hpp  parse_cli.hpp
include/catalyst/subcommands/test/: action.hpp  parse_cli.hpp
include/catalyst/utils/os/: os_defs.hpp
include/catalyst/utils/yaml/: configuration.hpp  load_profile_file.hpp  profile_write_back.hpp
include/catalyst/yaml-utils/: Configuration.hpp  load_profile_file.hpp  profile_write_back.hpp
include/catalyst/yaml_utils/: configuration.hpp  load_profile_file.hpp  profile_write_back.hpp
installation/: index.html
misc/: _catalyst_bash  _catalyst_zsh
search/: search_index.json
src/: .catalystignore  catalyst.cpp  dispatch.cpp  hooks.cpp  parse_rules.cpp  workspace.cpp
src/log-utils/: log.cpp
src/log_utils/: log.cpp
src/subcommand_actions/: add.cpp  build.cpp  init.cpp
src/subcommands/add/: action.cpp  add_git.cpp  add_local.cpp  add_system.cpp  add_vcpkg.cpp  parse_cli.cpp
src/subcommands/clean/: action.cpp  parse_cli.cpp
src/subcommands/configure/: action.cpp  parse_cli.cpp
src/subcommands/download/: action.cpp  parse_cli.cpp
src/subcommands/fetch/: action.cpp  helper.cpp  parse_cli.cpp
src/subcommands/fmt/: action.cpp  parse_cli.cpp
src/subcommands/generate/: action.cpp  file_ops.cpp  find_dep.cpp  ld_path.cpp  ldlibs.cpp  parse_cli.cpp  profile_comp.cpp  source_set.cpp
src/subcommands/generate/find_dep/: git.cpp  local.cpp  system.cpp  vcpkg.cpp
src/subcommands/generate/writers/: cbe.cpp  make.cpp  ninja.cpp  writer.cpp
src/subcommands/ide_sync/: action.cpp  parse_cli.cpp
src/subcommands/init/: action.cpp  emit_ide_config.cpp  parse_cli.cpp
src/subcommands/install/: action.cpp  parse_cli.cpp
src/subcommands/run/: action.cpp  parse_cli.cpp
src/subcommands/test/: action.cpp  parse_cli.cpp
src/subcommands/tidy/: action.cpp  parse_cli.cpp
src/utils/: process_exec.cpp
src/utils/log/: log.cpp
src/utils/yaml/: configuration.cpp  load_profile_file.cpp  profile_write_back.cpp
src/yaml-utils/: Configuration.cpp  configuration.cpp  load_profile_file.cpp  profile_write_back.cpp
src/yaml_utils/: configuration.cpp  load_profile_file.cpp  profile_write_back.cpp
tests/: test.cpp
